--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# Build and release folders and files
+*.o
+*.res
+*.layout
+Makefile.win
 
 # Other files and folders
-.settings/
+
 
 # Executables
+*.exe
 *.swf
 *.air
 *.ipa
 *.apk
-
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
