add exe-file-scanning ability

--- a/resource.rc
+++ b/resource.rc
@@ -17,12 +17,12 @@ END
 */
   
 // 图标资源  
-IDI_ICON_537UDM        ICON    DISCARDABLE     "resource/537UDM.ico"  
-IDI_ICON_537LOGO       ICON    DISCARDABLE     "resource/537logo.ico"  
+IDI_ICON_537UDM        ICON    "resource/537UDM.ico"  
+IDI_ICON_537LOGO       ICON    "resource/537logo.ico"  
   
 // 位图资源  
-BITMAP_537LOGO          BITMAP    DISCARDABLE     "resource/537logo.png" 
-BITMAP_WARNING			BITMAP    DISCARDABLE	  "resource/warning.png" 
+BITMAP_537LOGO          BITMAP    "resource/537logo.png" 
+BITMAP_WARNING			BITMAP    "resource/warning.png" 
   
 // 对话框资源  
 /*
